fullscreen button working and resize overflow problem fixed

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ html,body {
   margin: 0 auto;
   padding: 0;
   font-family: sans-serif;
+  font-size: 1em;
   width: 100%;
   height: 100%;
 
@@ -20,35 +21,30 @@ html,body {
   text-align: center;
 }
 
-
 h2 {
   font-weight: normal;
 }
 
-
-
-
-
-#page_console_wrap {
-  margin: 0 auto;
-  width: 100%;
-  border: solid black 2px;
-  background-color: lightgrey;
-}
-
-#page_console {
-  text-align: left;
-  padding-left: 20%;
-}
-
-
-
-
 #piano_wrap {
   margin: 0 auto;
   width: 100%;
-  background: white;
+  background: black;
+}
+
+#select_menu {
+  position: relative;
+  margin:0; 
+  padding-top: 1%;
+  padding-bottom: 1%;
+  width: 100%;
+  color: white;
+}
+
+#fullscreen_button{
+  position: absolute;
   height: 100%;
+  top: 0px;
+  right: 0px;
 }
 
 
@@ -57,36 +53,11 @@ h2 {
   padding: 0;
   background-color: black;
   width: 100%;
-  height: 100%;
-}
-
-#select_menu {
-  padding-top:5px;
-  margin: 0; 
-  height: 10%;
-  color: white;
-}
-
-#fullscreen_button{
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-}
-
-.select_menu option {
-  font-size: 12em;
-}
-
-#feel_piano_header{
 }
 
 #white_key_wrap {
   margin: 0 auto;
-  padding-top: 1%;
   width: 98%;
-  height: 89%;
   text-align: center;
 }
 
@@ -94,7 +65,6 @@ h2 {
 
 .white_key {
   display: inline-block;
-  height: 100%;
   background-color: white;
 
   box-sizing: border-box;
